common/tests/badSyntax/float.tyco
{-
 - Testing float operations
 -
 - Luis Lopes
 - $Id: float.tyco,v 1.1 2004/02/12 17:44:20 tyco Exp $
-}

new x  
x ? { val () = io ! printf [-2.34322 + 3.45654] } | 
x ! val [] |

new x  
x ? { val (y, z) = io ! printf [(y + z - 2.0 * y * z) / (z + 1.0)] } | 
x ! val [2.77, 7.289] |

new x
x ? { max(y, z) = if ( y > z ) then io ! printf [y] else io ! printf [z] } | 
x ! max [2.1236643, 7.554346] |

new x, w
x ? { val (y, z) = w ? { val (u, v) = io ! printf [-y] | io ! printf [z] } } | 
x ! val [2.2224, 7.1323] |
w ! val [3.64467, 6.96997] |

io ! printf [312312.132 + io ! getf []] 
